--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,11 @@ project(example-app)
 set(CMAKE_PREFIX_PATH "libtorch/share/cmake/Torch")
 find_package(Torch REQUIRED)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fms-extensions")
 
-add_executable(example-app main.cpp)
+add_library(example-app SHARED main.cpp test.h)
 target_link_libraries(example-app "${TORCH_LIBRARIES}")
+target_link_libraries(example-app "${TORCH_CUDA_LIBRARIES}")
 set_property(TARGET example-app PROPERTY CXX_STANDARD 14)
 
 # The following code block is suggested to be used on Windows.
